--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
           <li>
             <a href="#">About</a>
             <ul>
-              <li><a href="left-sidebar.html">Our Team</a></li>
-              <li><a href="right-sidebar.html">Join Netivot</a></li>
+              <li> <%= link_to("Our Team", new_team_path) %></li>
+              <li> <%= link_to("Join Netivot", new_join_path) %></li>
               <!-- <li>
                 <a href="#">Submenu</a>
                 <ul>
@@ -38,7 +38,7 @@
           <li><a href="elements.html">Events</a></li>
           <li><a href="elements.html">Netivot Network</a></li>
           <li><a href="elements.html">Resources</a></li>
-          <li><a href="#" class="button alt">Contact</a></li>
+          <li><a href="#" class="button special">Contact</a></li>
         </ul>
       </nav>
     </div>
