--- a/app/views/network/new.html.erb
+++ b/app/views/network/new.html.erb
@@ -1,7 +1,5 @@
 <!-- Content -->
   <section id="content">
-    <h3>Board Members</h3>
-    ljksalf
-    <!-- <%= image_tag("israel-path.jpg", class: "image left") %> -->
-
+    <h3>Netivot Network</h3>
+    <p>We’re excited to announce the launch of our new program, Netivot Network! Netivot Network connects you to other Netivot members to foster one-on-one connections outside of our monthly events. Whether you’re looking for a chavruta, someone to talk to about queer/Jewish things, or just a new friend to get coffee with, we can pair you up with another Netivot member with similar goals. You can meet over email, Skype, or in person. We’re excited to provide this opportunity for you, and we’re looking forward to seeing where you take these connections. To sign up, please fill out the form <%= link_to("here", "https://docs.google.com/forms/d/e/1FAIpQLSfFZ7s8W7T9KmQ4yNepaDdajHFh7dtlR0QDtKVujC6IEU8NIQ/viewform") %>. As always, please email <%= mail_to("netivotboston@gmail.com", "netivotboston@gmail.com") %> with any questions or concerns.
   </section>
