--- a/app/views/team/new.html.erb
+++ b/app/views/team/new.html.erb
@@ -17,7 +17,7 @@
     <h4>Bess Beller-Levesque, Treasurer and Secretary, International; Treasurer, Boston</h4>
     <p>Bess has been with Netivot since its creation, hosting Shabbat dinners on a consistent basis, always with a warm and welcoming smile. Her positive attitude and organizational skills are essential for Netivot's current transition and growth.</p>
     <br />
-    <%= image_tag("israel-path.jpg", class: "image left") %>
+    <%= image_tag("kristin.jpg", class: "image left") %>
     <h4>Kristin Ruben, Webmaster, International</h4>
     <p>Since attending her first Shabbat dinner in 2015, Kristin fell in love with Netivot and was hooked for life. She's excited to use her new programming skills to re-vamp the Netivot website and give it a well-deserved make-over.</p>
     <br />
