experimenting with react

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,4 +1,28 @@
 <section id="content">
   <h3>Events</h3>
-  <p>We host monthly Shabbat dinners, educational events, and other social events regularly. Join the mailing list or Facebook group for further information, and check back here for a list soon!</p>
+  <br />
+  <div class="filters">
+    <div class="location">
+      <h5>Location</h5>
+      <button class="button special small"><span class="icon fa-close fa-lg"></span>&nbsp;&nbsp;Boston</button>
+      <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;New York</button>
+      <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;Tel Aviv</button>
+    </div>
+    <br />
+    <h5>Event Type</h5>
+    <button class="button special small"><span class="icon fa-close fa-lg"></span>&nbsp;&nbsp;Shabbat</button>
+    <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;Educational</button>
+    <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;Social</button>
+  </div>
+  <hr />
+  <div class="events">
+    <strong>Event Title</strong>
+    <p>Event details</p>
+    <button class="button special small">Boston</button>
+    <button class="button special small">Shabbat</button>
+    <hr />
+  </div>
+
+  <div id="app"></div>
+  <script src="bundle.js"></script>
 </section>
