more React components

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -22,7 +22,7 @@
     <button class="button special small">Shabbat</button>
     <hr />
   </div>
-  <div id="app"></div>
+  <div id="cities"></div>
   <script src="bundle.js"></script>
   <hr />
 </section>
