building out react elements

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -2,27 +2,15 @@
   <h3>Events</h3>
   <br />
   <div class="filters">
-    <div class="location">
-      <h5>Location</h5>
-      <button class="button special small"><span class="icon fa-close fa-lg"></span>&nbsp;&nbsp;Boston</button>
-      <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;New York</button>
-      <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;Tel Aviv</button>
-    </div>
-    <br />
-    <h5>Event Type</h5>
-    <button class="button special small"><span class="icon fa-close fa-lg"></span>&nbsp;&nbsp;Shabbat</button>
-    <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;Educational</button>
-    <button class="button small"><span class="icon fa-plus fa-lg"></span>&nbsp;&nbsp;Social</button>
+  <h4>Location</h4>
+  <div class="row">
+    <div id="cities"></div>
   </div>
-  <hr />
-  <div class="events">
-    <strong>Event Title</strong>
-    <p>Event details</p>
-    <button class="button special small">Boston</button>
-    <button class="button special small">Shabbat</button>
-    <hr />
+  <br />
+  <h4>Event Type</h4>
+  <div class="row">
+    <div id="events"></div>
   </div>
-  <div id="cities"></div>
   <script src="bundle.js"></script>
   <hr />
 </section>
