fixing react components that broke along the way

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -4,13 +4,14 @@
   <div class="filters">
   <h4>Location</h4>
   <div class="row">
+    <div id="app"></div>
     <div id="cities"></div>
   </div>
   <br />
   <h4>Event Type</h4>
   <div class="row">
     <div id="events"></div>
-  </div>
   <script src="bundle.js"></script>
+</div>
   <hr />
 </section>
